# xml-xsd-valiator

./: .gitignore  CMakeLists.txt  LICENSE  README.ko.md  README.md  main.cpp  person_int_schema.xsd  person_invalid.xml  simple_error_handler.cpp  simple_error_handler.hpp  xml_validator_app.cpp  xml_validator_app.hpp
